--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
