--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".screens.AddTextStory"
+            android:name=".screens.status.AddTextStory"
             android:exported="false" />
         <activity
-            android:name=".screens.AddImageActivity"
+            android:name=".screens.status.AddImageActivity"
             android:exported="false" />
         <activity
             android:name=".ui.main.home"
             android:exported="false" />
         <activity
-            android:name=".screens.AddNewContact"
+            android:name=".screens.chat.AddNewContact"
             android:exported="false" />
         <activity
-            android:name=".screens.SplashScreen"
+            android:name=".ui.main.SplashScreen"
             android:exported="true"
             android:theme="@style/Theme.MyApplication.NoActionBar">
             <intent-filter>
@@ -38,6 +38,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".screens.authentication.VerifyPhoneNumber"
+            android:exported="true" />
+        <activity
+            android:name=".screens.authentication.SignUp"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
