Added Video , Audio and chatting room

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,10 @@ dependencies {
 
     implementation 'com.github.Drjacky:ImagePicker:1.8.4'
 
+    //jitsi
+    implementation ('org.jitsi.react:jitsi-meet-sdk:2.9.0') { transitive = true }
+
+
 
 
 }
