--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".screens.chat.VideoActivity"
+            android:exported="false" />
+        <activity
             android:name=".screens.chat.ChatActivity"
             android:exported="false" />
         <activity
@@ -46,7 +49,7 @@
             android:exported="true" />
         <activity
             android:name=".screens.authentication.SignUp"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
