Added login and modified signup to be synchronized with FB.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".screens.authentication.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".screens.chat.VideoActivity"
             android:exported="false" />
         <activity
