--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".screens.authentication.LoginActivity"
+            android:name=".ui.main.SettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screens.authentication.LoginFormActivity"
             android:exported="false" />
         <activity
             android:name=".screens.chat.VideoActivity"
