--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,56 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.datastructures.chatty"
     android:theme="@android:style/Theme.NoTitleBar">
-
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28"
-        tools:ignore="ScopedStorage" />
-
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".ui.main.SettingActivity"
+            android:name="com.example.myapplication.ui.main.SettingActivity"
             android:exported="false" />
         <activity
-            android:name=".screens.authentication.LoginFormActivity"
+            android:name="com.example.myapplication.screens.authentication.LoginFormActivity"
             android:exported="false" />
         <activity
-            android:name=".screens.chat.VideoActivity"
+            android:name="com.example.myapplication.screens.chat.VideoActivity"
             android:exported="false" />
         <activity
-            android:name=".screens.chat.ChatActivity"
+            android:name="com.example.myapplication.screens.chat.ChatActivity"
             android:exported="false" />
         <activity
-            android:name=".screens.status.AddTextStory"
+            android:name="com.example.myapplication.screens.status.AddTextStory"
             android:exported="false" />
         <activity
-            android:name=".screens.status.AddImageActivity"
+            android:name="com.example.myapplication.screens.status.AddImageActivity"
             android:exported="false" />
         <activity
-            android:name=".main.home"
+            android:name="com.example.myapplication.ui.main.home"
             android:exported="true" />
         <activity
-            android:name=".screens.chat.AddNewContact"
+            android:name="com.example.myapplication.screens.chat.AddNewContact"
             android:exported="false" />
         <activity
-            android:name=".main.SplashScreen"
+            android:name="com.example.myapplication.ui.main.SplashScreen"
             android:exported="true"
             android:theme="@style/Theme.MyApplication.NoActionBar">
             <intent-filter>
@@ -60,10 +51,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".screens.authentication.VerifyPhoneNumber"
+            android:name="com.example.myapplication.screens.authentication.VerifyPhoneNumber"
             android:exported="true" />
         <activity
-            android:name=".screens.authentication.SignUp"
+            android:name="com.example.myapplication.screens.authentication.SignUp"
             android:exported="true" />
     </application>
 
