--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,10 @@ dependencies {
     //jitsi
     implementation ('org.jitsi.react:jitsi-meet-sdk:2.9.0') { transitive = true }
 
+    //lottie
+    implementation "com.airbnb.android:lottie:5.0.3"
+
+
 
 
 
