--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,7 +118,7 @@ dependencies {
 
     //lottie
     implementation "com.airbnb.android:lottie:5.0.3"
-
+    implementation "androidx.browser:browser:1.4.0"
 
 
 
