--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.iml
+.gradle
+/local.properties
 /.idea/caches
+/.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
@@ -9,3 +12,4 @@
 /captures
 .externalNativeBuild
 .cxx
+local.properties
