--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.datastructures.chatty"
     android:allowBackup="false"
     android:fullBackupContent="false"
-    android:theme="@android:style/Theme.NoTitleBar">
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+    >
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -17,49 +18,47 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_img_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.MyApplication" >
+        <activity
+            android:name="com.example.myapplication.ui.main.ProfileActivity"
+            android:exported="false" />
         <activity
             android:name="com.example.myapplication.ui.main.SettingActivity"
-            android:launchMode = "singleTop"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.authentication.LoginFormActivity"
             android:exported="false"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.chat.VideoActivity"
-            android:launchMode = "singleTop"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.status.AddTextStoryActivity"
-            android:launchMode = "singleTop"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.status.AddImageStoryActivity"
             android:exported="false"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.ui.main.Home"
             android:exported="true"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.chatroom.ChatRoom_activity"
             android:exported="true"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.chat.AddNewContact"
             android:exported="false"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.ui.main.SplashScreen"
-            android:launchMode = "singleTop"
             android:exported="true"
-            android:theme="@style/Theme.MyApplication.NoActionBar">
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.MyApplication.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -68,12 +67,12 @@
         </activity>
         <activity
             android:name="com.example.myapplication.screens.authentication.VerifyPhoneNumber"
-            android:launchMode = "singleTop"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.authentication.SignUp"
-            android:launchMode = "singleTop"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
