--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myapplication"
-        minSdk 28
+        minSdk 27
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -118,7 +118,7 @@ dependencies {
 
     //lottie
     implementation "com.airbnb.android:lottie:5.0.3"
-
+    implementation "androidx.browser:browser:1.4.0"
 
 
 
