--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.datastructures.chatty"
-    android:theme="@android:style/Theme.NoTitleBar">
+    android:allowBackup="false"
+    android:fullBackupContent="false"
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+    >
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -15,49 +18,43 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_img_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.MyApplication" >
+        <activity
+            android:name="com.example.myapplication.ui.main.ProfileActivity"
+            android:exported="false" />
         <activity
             android:name="com.example.myapplication.ui.main.SettingActivity"
-            android:launchMode = "singleTop"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.authentication.LoginFormActivity"
             android:exported="false"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
-            android:name="com.example.myapplication.screens.chat.VideoActivity"
-            android:launchMode = "singleTop"
-            android:exported="false" />
-        <activity
-            android:name="com.example.myapplication.screens.chat.ChatActivity"
+            android:name="com.example.myapplication.screens.status.AddTextStoryActivity"
             android:exported="false"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
-            android:name="com.example.myapplication.screens.status.AddTextStory"
-            android:launchMode = "singleTop"
-            android:exported="false" />
-        <activity
-            android:name="com.example.myapplication.screens.status.AddImageActivity"
+            android:name="com.example.myapplication.screens.status.AddImageStoryActivity"
             android:exported="false"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.ui.main.Home"
             android:exported="true"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
+        <activity
+            android:name="com.example.myapplication.screens.chatroom.ChatRoom_activity"
+            android:exported="true"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.chat.AddNewContact"
             android:exported="false"
-            android:launchMode = "singleTop"
-            />
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.ui.main.SplashScreen"
-            android:launchMode = "singleTop"
             android:exported="true"
-            android:theme="@style/Theme.MyApplication.NoActionBar">
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.MyApplication.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -66,12 +63,12 @@
         </activity>
         <activity
             android:name="com.example.myapplication.screens.authentication.VerifyPhoneNumber"
-            android:launchMode = "singleTop"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.authentication.SignUp"
-            android:launchMode = "singleTop"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
