Added Message Encryption / Decryption using Base64 Algorithm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         <activity
             android:name="com.example.myapplication.screens.chatroom.ChatRoom_activity"
             android:exported="true"
-            android:launchMode="singleTop" />
+            android:launchMode="standard" />
         <activity
             android:name="com.example.myapplication.screens.chat.AddNewContact"
             android:exported="false"
