--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="com.datastructures.chatty"
     android:allowBackup="false"
     android:fullBackupContent="false"
-    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-    >
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -18,11 +17,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_img_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication" >
+        android:theme="@style/Theme.MyApplication">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
+
+
         <activity
             android:name="com.example.myapplication.ui.main.ProfileActivity"
-            android:launchMode="singleTop"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.ui.main.SettingActivity"
             android:exported="false"
@@ -55,7 +71,7 @@
             android:name="com.example.myapplication.ui.main.SplashScreen"
             android:exported="true"
             android:launchMode="singleTop"
-            android:theme="@style/Theme.MyApplication.NoActionBar" >
+            android:theme="@style/Theme.MyApplication.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
