--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
 
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
 
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="YOUR_API_KEY" />
@@ -42,6 +32,10 @@
         <activity
             android:name="com.example.myapplication.ui.main.SettingActivity"
             android:exported="false"
+            android:launchMode="singleTop" />
+        <activity
+            android:name="com.example.myapplication.screens.chat.AddGroupActivity"
+            android:exported="true"
             android:launchMode="singleTop" />
         <activity
             android:name="com.example.myapplication.screens.authentication.LoginFormActivity"
