--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:exported="true"
             android:launchMode="singleTop" />
         <activity
-            android:name="com.example.myapplication.screens.chatroom.ChatRoom_activity"
+            android:name="com.example.myapplication.screens.chatroom.ChatRoom"
             android:exported="true"
             android:launchMode="standard" />
         <activity
