--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,7 +131,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:5.0.3"
     implementation "androidx.browser:browser:1.4.0"
 
-
+    implementation 'com.github.sarnavakonar:TextWriter:v1.0'
 
 
 }
